# Glyphic

./: .gitignore  .npmrc  AGENTS.md  AGENT_INTEGRATION_TEST_SUITE.md  BASELINE.md  CHATGPT_DIAGNOSTIC_PROMPT.md  DEPLOYMENT_RELEASE_GUIDE.md  GLYPHIC_PRODUCT_UI_AUDIT.md  MASTERYMODE_DESIGN_SYSTEM.md  MASTERYMODE_FRONTEND_SUMMARY.md  MASTERYMODE_USER_GUIDE.md  NoteVault_Full_Build_Prompt.md  PERFORMANCE_DIAGNOSTIC_CHECKLIST.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_BACKEND_SUMMARY.md  PHASE_2_IMPLEMENTATION_PLAN.md  README.md  biome.json  index.html  lint-full.txt  lint-output.txt  lint-output2.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/prompts/: add-sidecar-action.prompt.md  add-vertical-slice.prompt.md  backfill.sidecar.tests.prompt.md  extract-llm-to-sidecar.prompt.md
.github/workflows/: ci.yml  copilot-instructions
docs/: BIOME_ORG_WORKFLOW_MANUAL.md  E2E_CHECKLIST.md  shortcut-audit-2026-05.md  state-assessment-2026-05.md
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
mockups/: 01-welcome-screen.html  02-sidebar-redesign.html  03-editor-toolbar.html  04-chat-panel.html  05-full-layout.html  README.md
sidecars/: install_deps.sh
sidecars/agent_system/: agent_profiles.md  agent_research_policy_forge.json  agent_research_policy_pathfinder.json  agent_research_policy_prism.json  agent_research_policy_sage.json  (+4 more)
skills/: add-sidecar-action.md  add-vertical-slice.md  backfill-sidecar-tests.md  extract-llm-to-sidecar.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diagnostics.rs  lib.rs  main.rs
src-tauri/src/ai/: config.rs  mcp_http.rs  mcp_protocol.rs  mcp_server.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/capture/: crop.rs  mod.rs  overlay.rs  postprocess.rs  screen.rs  window_detect.rs
src-tauri/src/commands/: ai_commands.rs  annotation_commands.rs  backup_commands.rs  capture_commands.rs  diagram_commands.rs  export_commands.rs  fe_commands.rs  flashcards.rs  mastery_commands.rs  mod.rs  search_commands.rs  settings_commands.rs  state_commands.rs  study.rs  study_plan_commands.rs  tag_commands.rs  vault_commands.rs  vault_study.rs
src-tauri/src/db/: annotations.rs  backlinks.rs  index.rs  mod.rs  schema.rs  screenshots.rs  search.rs  tags.rs
src-tauri/src/export/: markdown.rs  pdf.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/services/: backup_service.rs
src-tauri/src/vault/: config.rs  manager.rs  mod.rs  watcher.rs
(+196 files in other folders)
