[package]
name = "glyphic"
version = "1.0.0"
description = "A desktop note-taking app with first-class screenshot support"
authors = ["Glyphic"]
edition = "2021"

[lib]
name = "glyphic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
walkdir = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
env_logger = "0.11"
directories = "5"
trash = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
xcap = "0.0.14"
