[package]
name = "glyphic"
version = "1.0.0"
description = "A desktop note-taking app with first-class screenshot support"
authors = ["Glyphic"]
edition = "2021"

[lib]
name = "glyphic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
desktop-toolkit = { git = "https://github.com/chamber-19/desktop-toolkit", tag = "v2.6.0" }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
walkdir = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
axum = "0.7"
tower = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
directories = "6"
trash = "5"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
xcap = "0.0.14"

[package.metadata.desktop-toolkit]
library-tag = "v2.6.0"
shim-tag    = "v2.6.0"
